--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -55,11 +55,11 @@
                                                                         <div class="dot-image">
                                                                             <a href="" class="product-permalink"></a>
                                                                             <div class="thumbnail">
-                                                                                <img src="{{this.image}}"
+                                                                                <img src="{{this.gallery}}"
                                                                                     alt="">
                                                                             </div>
                                                                             <div class="thumbnail hover">
-                                                                                <img src="{{this.image}}"
+                                                                                <img src="{{this.gallery}}"
                                                                                     alt="">
                                                                             </div>
                                                                             <div class="actions">
@@ -333,10 +333,10 @@
                                                     <div class="dot-image">
                                                         <a href="" class="product-permalink"></a>
                                                         <div class="thumbnail">
-                                                            <img src="{{this.image}}" alt="">
+                                                            <img src="{{this.gallery}}" alt="">
                                                         </div>
                                                         <div class="thumbnail hover">
-                                                            <img src="{{this.image}}" alt="">
+                                                            <img src="{{this.gallery}}" alt="">
                                                         </div>
                                                         <div class="actions">
                                                             <ul>
@@ -613,7 +613,7 @@
                                                     </div>
                                                     <div class="thumbnail">
                                                         <a href="">
-                                                            <img src="{{this.image}}" alt="">
+                                                            <img src="{{this.gallery}}" alt="">
                                                         </a>
                                                     </div>
                                                 </div>
