--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -55,11 +55,11 @@
                                                                         <div class="dot-image">
                                                                             <a href="" class="product-permalink"></a>
                                                                             <div class="thumbnail">
-                                                                                <img src="{{this.image}}"
+                                                                                <img src="{{this.gallery}}"
                                                                                     alt="">
                                                                             </div>
                                                                             <div class="thumbnail hover">
-                                                                                <img src="{{this.image}}"
+                                                                                <img src="{{this.gallery}}"
                                                                                     alt="">
                                                                             </div>
                                                                             <div class="actions">
@@ -189,17 +189,17 @@
                                     <div class="outer-main">
                                         <div class="main-image swiper">
                                             <div class="wrap swiper-wrapper">
-                                                <div class="item swiper-slide"><img src="{{this.image}}"
+                                                <div class="item swiper-slide"><img src="{{this.gallery}}"
                                                         alt=""></div>
-                                                <div class="item swiper-slide"><img src="{{this.image}}"
+                                                <div class="item swiper-slide"><img src="{{this.gallery}}"
                                                         alt=""></div>
-                                                <div class="item swiper-slide"><img src="{{this.image}}"
+                                                <div class="item swiper-slide"><img src="{{this.gallery}}"
                                                         alt=""></div>
-                                                <div class="item swiper-slide"><img src="{{this.image}}"
+                                                <div class="item swiper-slide"><img src="{{this.gallery}}"
                                                         alt=""></div>
-                                                <div class="item swiper-slide"><img src="{{this.image}}"
+                                                <div class="item swiper-slide"><img src="{{this.gallery}}"
                                                         alt=""></div>
-                                                <div class="item swiper-slide"><img src="{{this.image}}"
+                                                <div class="item swiper-slide"><img src="{{this.gallery}}"
                                                         alt=""></div>
                                             </div>
                                         </div>
@@ -211,27 +211,27 @@
                                         <div class="thumbnail-image swiper">
                                             <div class="wrap swiper-wrapper">
                                                 <div class="item swiper-slide">
-                                                    <div class="thumb-wrap"><img src="{{this.image}}" alt="">
+                                                    <div class="thumb-wrap"><img src="{{this.gallery}}" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="item swiper-slide">
-                                                    <div class="thumb-wrap"><img src="{{this.image}}" alt="">
+                                                    <div class="thumb-wrap"><img src="{{this.gallery}}" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="item swiper-slide">
-                                                    <div class="thumb-wrap"><img src="{{this.image}}" alt="">
+                                                    <div class="thumb-wrap"><img src="{{this.gallery}}" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="item swiper-slide">
-                                                    <div class="thumb-wrap"><img src="{{this.image}}" alt="">
+                                                    <div class="thumb-wrap"><img src="{{this.gallery}}" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="item swiper-slide">
-                                                    <div class="thumb-wrap"><img src="{{this.image}}" alt="">
+                                                    <div class="thumb-wrap"><img src="{{this.gallery}}" alt="">
                                                     </div>
                                                 </div>
                                                 <div class="item swiper-slide">
-                                                    <div class="thumb-wrap"><img src="{{this.image}}" alt="">
+                                                    <div class="thumb-wrap"><img src="{{this.gallery}}" alt="">
                                                     </div>
                                                 </div>
                                             </div>
@@ -388,7 +388,7 @@
                                 <div id="product-custom" class="product-about custom">
                                     <h3>Our custom size</h3>
                                     <div class="image">
-                                        <img src="{{this.image}}" alt=""> <!--image custom shoes-->
+                                        <img src="{{this.gallery}}" alt=""> <!--image custom shoes-->
                                     </div>
                                 </div>
                                 <div id="product-review" class="product-about review">
@@ -410,7 +410,7 @@
                                             <div class="profile">
                                                 <div class="thumb-name">
                                                     <div class="image">
-                                                        <img src="{{this.image}}" alt="">
+                                                        <img src="{{this.gallery}}" alt="">
                                                     </div>
                                                     <div class="grouping">
                                                         <div class="name">Bach</div>
@@ -462,10 +462,10 @@
                                         <div class="dot-image">
                                             <a href="" class="product-permalink"></a>
                                             <div class="thumbnail">
-                                                <img src="{{this.image}}" alt="">
+                                                <img src="{{this.gallery}}" alt="">
                                             </div>
                                             <div class="thumbnail hover">
-                                                <img src="{{this.image}}" alt="">
+                                                <img src="{{this.gallery}}" alt="">
                                             </div>
                                             <div class="actions">
                                                 <ul>
@@ -742,7 +742,7 @@
                                                     </div>
                                                     <div class="thumbnail">
                                                         <a href="">
-                                                            <img src="{{this.image}}" alt="">
+                                                            <img src="{{this.gallery}}" alt="">
                                                         </a>
                                                     </div>
                                                 </div>
