--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -211,9 +211,10 @@
 
             <div id="search-float" class="search-float">
                 <div class="containe rwide">
-                    <form action="" class="search">
+                    <form action="/" method="get" class="search">
                         <i class="ri-search-line"></i>
-                        <input type="search" class="input" id="" placeholder="Search products">
+                        <input type="search" class="input" id="productName" name="productName" placeholder="Search products">
+                        <button type="submit"> Search </button>
                         <i class="ri-close-line" close-button></i>
                     </form>
                 </div>
