--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -231,7 +231,7 @@
                     <div class="item swiper-slide">
                         <div class="image">
                             <div class="ob-cover">
-                                <img src="{{this.gallery}}" alt="">
+                                <a href="/product/{{this._id}}"><img src="{{this.gallery}}" alt=""></a>
                             </div>
                             <div class="title-info">
                                 <div class="container wide">
